--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mario</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
@@ -16,7 +17,6 @@
     <script type="text/javascript" src="assets/myJs/DynamicEntity.js"></script>
     <script type="text/javascript" src="assets/myJs/Key.js"></script>
     <script type="text/javascript" src="assets/myJs/Mario.js"></script>
-    <script type="text/javascript" src="assets/myJs/Brick.js"></script>
     <script type="text/javascript" src="assets/myJs/script.js"></script>
 </body>
 
