--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <audio src="assets/audio/overworld.ogg" autoplay loop></audio>
     <canvas border='1' id="canvas" width="800" height="400"></canvas>
     <script type="text/javascript" src="assets/myJs/Entity.js"></script>
     <script type="text/javascript" src="assets/myJs/Area.js"></script>
