add new class(moving Entity), add functional

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="assets/myJs/Entity.js"></script>
     <script type="text/javascript" src="assets/myJs/Area.js"></script>
     <script type="text/javascript" src="assets/myJs/DynamicEntity.js"></script>
+    <script type="text/javascript" src="assets/myJs/MovingEntity.js"></script>
     <script type="text/javascript" src="assets/myJs/Key.js"></script>
     <script type="text/javascript" src="assets/myJs/Mario.js"></script>
     <script type="text/javascript" src="assets/myJs/script.js"></script>
