add menu, audio, fonts

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 </head>
 
 <body>
-    <audio src="assets/audio/overworld.ogg" autoplay loop></audio>
+    <menu>
+        <button id='start_game'><div><span>start game</span></div></button>
+        <button><div><span>start game</span></div></button>
+        <button><div><span>start game</span></div></button>
+        <button><div><span>start game</span></div></button>
+        <button><div><span>start game</span></div></button>
+        <button><div><span>start game</span></div></button>
+    </menu>
     <canvas border='1' id="canvas" width="800" height="400"></canvas>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/myJs/AudioEvents.js"></script>
+    <script type="text/javascript" src="assets/myJs/Game.js"></script>
     <script type="text/javascript" src="assets/myJs/Entity.js"></script>
     <script type="text/javascript" src="assets/myJs/Area.js"></script>
     <script type="text/javascript" src="assets/myJs/DynamicEntity.js"></script>
