--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <body>
     <menu>
         <button id='start_game'><div><span>start game</span></div></button>
-        <button><div><span>start game</span></div></button>
-        <button><div><span>start game</span></div></button>
-        <button><div><span>start game</span></div></button>
-        <button><div><span>start game</span></div></button>
-        <button><div><span>start game</span></div></button>
+        <button><div><span>records</span></div></button>
+        <button><div><span>options</span></div></button>
+        <button><div><span>registration</span></div></button>
+        <button><div><span>autorization</span></div></button>
+        <button><div><span>donate</span></div></button>
     </menu>
+
+    <button id='repeat' class='repeat'></button>
+
     <canvas border='1' id="canvas" width="800" height="400"></canvas>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/myJs/draw.js"></script>
     <script type="text/javascript" src="assets/myJs/AudioEvents.js"></script>
     <script type="text/javascript" src="assets/myJs/Game.js"></script>
     <script type="text/javascript" src="assets/myJs/Entity.js"></script>
